--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.0.0"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -19,7 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.github.viethoa:customdialogs:1.2.1-SNAPSHOT'
-    //compile project(':libraries:CustomDialog')
+    //compile 'com.github.viethoa:customdialogs:1.2.1-SNAPSHOT'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile project(':libraries:CustomDialog')
 }
 
