--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.3.0'
     }
 }
 
@@ -15,4 +15,13 @@ allprojects {
         jcenter()
         maven { url 'https://oss.sonatype.org/content/groups/public' }
     }
+}
+
+
+ext {
+    compileSdkVersion = 23
+    buildToolsVersion = "23.0.1"
+
+    minSdkVersion = 14
+    targetSdkVersion = 23
 }
