--- a/libraries/CustomDialog/build.gradle
+++ b/libraries/CustomDialog/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'android-library'
-apply from: 'maven_push.gradle'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.0.0'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName '1.0'
     }
