--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.github.viethoa:customdialogs:2.0.0-SNAPSHOT'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.github.viethoa:customdialogs:3.0.0'
     //compile project(':libraries:CustomDialog')
 }
 
